--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: any
+  hive: ">=2.2.3 <2.3.0"
+  hive_flutter: ">=1.1.0 <1.2.0"
 
 
   # The following adds the Cupertino Icons font to your application.
