--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: 0.13.5
   flutter_svg: any
   hive: ">=2.2.3 <2.3.0"
   hive_flutter: ">=1.1.0 <1.2.0"
